# realTimeChat

./: .black  .flake8  .gitignore  README.md  Untitled Diagram.drawio  chat-architecture.drawio  isort.cfg  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_18_1316-6951e65c7b4b_chats_and_messages.py
deploy/: Dockerfile
deploy/dev/: compose.yaml
src/: app.py  consumer.py  main.py
src/api/: __init__.py  chats.py  messages.py
src/configs/: __init__.py  app.py  base.py  broker.py  db.py
src/db/: base_repository.py
src/db/postgres/: __init__.py  core.py  deps.py
src/db/postgres/models/: __init__.py  base_model.py  chats.py  messages.py  participants.py
src/db/postgres/repos/: __init__.py  chats.py  messages.py  participants.py
src/managers/: __init__.py  messages_spreading.py  websockets.py
src/responses/: __init__.py  chats.py
src/schemas/: __init__.py  chats.py  messages.py
