[tool.poetry]
name = "realtimechat"
version = "0.1.0"
description = ""
authors = ["n.kanunnikov <n.kanunnikov@freshauto.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
flake8 = "^7.1.1"
asyncpg = "^0.30.0"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
mypy = "^1.14.1"
websockets = "^14.1"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
